--- a/package.json
+++ b/package.json
@@ -3,46 +3,106 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "yarn check-env && ng serve --configuration=fast",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "check-env": "yarn ~~check-env",
+    "~~check-env": "node scripts/check-environment"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "@angular/animations": "^7.0.0",
+    "@angular/cdk": "7.0.0",
+    "@angular/common": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/elements": "^7.0.0",
+    "@angular/forms": "^7.0.0",
+    "@angular/material": "7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/router": "^7.0.0",
+    "@angular/service-worker": "^7.0.0",
+    "@webcomponents/custom-elements": "^1.2.0",
+    "classlist.js": "^1.1.20150312",
+    "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "rxjs": "^6.3.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.6",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular/cli": "7.2.1",
+    "@angular/compiler": "^7.0.0",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/language-service": "^7.0.0",
+    "@types/jasmine": "^2.5.52",
+    "@types/jasminewd2": "^2.0.4",
+    "@types/node": "~6.0.60",
+    "@yarnpkg/lockfile": "^1.1.0",
+    "archiver": "^1.3.0",
+    "canonical-path": "1.0.0",
+    "chalk": "^2.1.0",
+    "cjson": "^0.5.0",
     "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
+    "cross-spawn": "^5.1.0",
+    "css-selector-parser": "^1.3.0",
+    "dgeni": "^0.4.11",
+    "dgeni-packages": "^0.27.1",
+    "entities": "^1.1.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-jasmine": "^2.2.0",
+    "find-free-port": "^2.0.0",
+    "firebase-tools": "^5.1.1",
+    "fs-extra": "^2.1.2",
+    "globby": "^6.1.0",
+    "hast-util-is-element": "^1.0.0",
+    "hast-util-to-string": "^1.0.0",
+    "html": "^1.0.0",
+    "http-server": "^0.9.0",
+    "ignore": "^3.3.3",
+    "image-size": "^0.5.1",
+    "jasmine": "^2.6.0",
+    "jasmine-core": "^2.8.0",
+    "jasmine-marbles": "^0.3.1",
+    "jasmine-spec-reporter": "^4.1.0",
+    "jasmine-ts": "^0.2.1",
+    "jsdom": "^9.12.0",
+    "json-schema-traverse": "^0.4.1",
+    "json5": "^1.0.1",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "lighthouse": "^3.2.1",
+    "lodash": "^4.17.4",
+    "lunr": "^2.1.0",
+    "npm-run-all": "^4.1.5",
+    "protractor": "^5.2.0",
+    "rehype": "^6.0.0",
+    "rehype-slug": "^2.0.0",
+    "remark": "^9.0.0",
+    "remark-html": "^8.0.0",
+    "rimraf": "^2.6.1",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.7",
+    "tree-kill": "^1.1.0",
+    "ts-node": "^3.3.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.9.1",
+    "typescript": "~3.1.1",
+    "uglify-js": "^3.0.15",
+    "unist-util-filter": "^0.2.1",
+    "unist-util-source": "^1.0.1",
+    "unist-util-visit": "^1.1.1",
+    "unist-util-visit-parents": "^1.1.1",
+    "vrsource-tslint-rules": "^5.8.2",
+    "watchr": "^3.0.1",
+    "webpack-cli": "^3.1.2",
+    "xregexp": "^4.0.0",
+    "yargs": "^7.0.2"
   }
 }
